--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "engines": {
     "node": "~0.6.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "backbone": "~0.9.2",
+    "underscore": "~1.4.3"
+  },
   "devDependencies": {
-    "jasmine-node": "~1.0.28"
+    "jasmine-node": "~1.0.28",
+    "requirejs": "~2.1.2",
+    "UnderscoreMatchersForJasmine": "0.0.5"
   }
 }
