--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "backbone": "~0.9.2",
-    "underscore": "~1.4.3"
+    "underscore": "~1.4.3",
+    "sinon": "~1.5.2"
   },
   "devDependencies": {
     "jasmine-node": "~1.0.28",
