--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "backbone": "~0.9.2",
     "underscore": "~1.4.3",
-    "sinon": "~1.5.2"
+    "sinon": "~1.5.2",
+    "handlebars": "~1.0.7"
   },
   "devDependencies": {
     "jasmine-node": "~1.0.28",
